--- a/client/src/stylesheets/voucherModal.css
+++ b/client/src/stylesheets/voucherModal.css
@@ -9,16 +9,46 @@
     z-index: 999;
     top: 0;
     left: 0;
+    cursor: pointer;
 }
+
 .modal-Container{
     position: fixed;
-    width: 60%;
-    height: 60%;
-    top: 20%;
-    left: 20%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     z-index: 1000;
     background-color: #757e85;
+    border-radius: 10px;
 }
+
+@media (min-width: 650px) {
+    .modal-Container{
+        position: fixed;
+        width: 80%;
+        height: 80%;
+        top: 10%;
+        left: 10%;
+        z-index: 1000;
+        background-color: #757e85;
+        border-radius: 10px;
+    }
+}
+
+@media (min-width:1000px) {
+    .modal-Container{
+        position: fixed;
+        width: 60%;
+        height: 60%;
+        top: 20%;
+        left: 20%;
+        z-index: 1000;
+        background-color: #757e85;
+        border-radius: 10px;
+    }
+}
+
 
 .modal-Header{
     height: 40px;
@@ -26,12 +56,19 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     background: #b01b1f;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 .modal-Header-CloseBtn{
     width: 100px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-end; 
+}
+
+.closeBtn{
+    border-top-right-radius: 10px;
+    cursor: pointer;
 }
 
 .modal-Header-Text{
