Added multi-event capability. This includes a new module 'SelectEvent' and updates to the modules 'CurrentEntries', and 'AddEntry'. Also modified SQL in index.js.

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -81,3 +81,11 @@ body {
 #submitEmailsButton{
   display: none;
 }
+
+.eventList {
+  display: none;
+}
+
+#showEventButton {
+  display: block;
+}
