--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,5 +1,5 @@
 body {
-  margin:0 10px;
+  margin:0 0px;
 }
 .App {
   font-family: Arial, Helvetica, sans-serif;
@@ -80,4 +80,23 @@ body {
 }
 #submitEmailsButton{
   display: none;
+}
+#curr_entries_table {
+  margin: 0 auto;
+  width: 85%;
+}
+#curr_entries_bttns {
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  
+}
+#editButton {
+  /* border: 2px solid green; */
+  margin-left: 25%;
+  
+
 }
