--- a/client/src/NavBar/PageNavStyle.css
+++ b/client/src/NavBar/PageNavStyle.css
@@ -15,9 +15,9 @@
 }
 
 #bottom_navbar {    
-    -webkit-box-shadow: 0 6px 3px #888888;
-    -moz-box-shadow: 0 6px 3px #888888;
-    box-shadow: 0 6px 3px #888888;
+    -webkit-box-shadow: 0 4px 3px #2b2b2b;
+    -moz-box-shadow: 0 4px 3px #2b2b2b;
+    box-shadow: 0 4px 3px #2b2b2b;
 }
 
 @media only screen and (max-width: 1500px) {
