--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -104,7 +104,7 @@ h1{
     display: flex;
     justify-content: center;
     width:100%;
-    margin: auto;
+    margin: none;
 }
 
 #editButton{
@@ -125,4 +125,22 @@ h1{
     font-family: 'Oswald', sans-serif;
     padding: 1%;
     padding-right: 12%;
+}
+
+#ETitle{
+    font-family: 'Oswald', sans-serif;
+    padding: 1%;
+    padding-right: 12%;
+    text-align: center;
+}
+
+#SUTitle{
+    display: flex;
+    justify-content: center;
+    width:100%;
+    margin: none;
+}
+
+h2{
+    font-family: 'Oswald', sans-serif;
 }
