--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,46 @@
+
 body {
   margin:0 10px;
 }
 .App {
-  font-family: Arial, Helvetica, sans-serif;
-  max-width:600px;
+  font-family: 'Oswald', sans-serif;
+  max-width:100%;
+  width:600px;
   margin: auto;
+  padding: 20px;
+  background-color: #F0F1F3;
+  float: left;
 }
+
+#entries{
+  font-family: 'Open Sans', sans-serif;
+}
+
 #userInput {
+  padding-top: 20px;
+  margin-right: 5%;
+  font-family: 'Open Sans', sans-serif;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 #userInput div{
   width: 100%;
   margin: auto;
 }
 #userInput input{
-  width: 90%;
-  margin: 10px;
+  width: 100%;
   padding: 10px;
   font-size: 2rem;
   border-radius: 5px;
   color: #333;
-  background-color:rgba(135, 206, 235, 0.3);
+  background-color:#dbdddf;
 }
 #firstLastName {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
 #userInput label{
   display: block;
 }
@@ -37,6 +51,7 @@ body {
   justify-content: center;
 }
 .submitBtn {
+  margin-top: 0px;
   margin: 20px;
   padding: 10px;
   width: 50%;
@@ -79,28 +94,5 @@ body {
   visibility: hidden;
 }
 #submitEmailsButton{
-  display: none;
-}
-#assignVouchersButton{
-  display: none;
-}
-
-.eventList {
-  display: none;
-}
-
-#showEventButton {
-  display: block;
-}
-
-.input {
-  display: none;
-}
-
-#createEvent {
-  display: none;
-}
-
-.Hide {
   display: none;
 }
