--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,6 +1,3 @@
-body {
-  margin:0 10px;
-}
 .App {
   font-family: Arial, Helvetica, sans-serif;
   max-width:600px;
@@ -80,4 +77,14 @@ body {
 }
 #submitEmailsButton{
   display: none;
+}
+.header{
+  position: sticky;
+  left: 0;
+  top: 0;
+  background: #b01b1f;
+  width: 100%;
+  text-align: center;
+  color: white;
+  padding: 10px;
 }
