--- a/client/src/stylesheets/voucherModal.css
+++ b/client/src/stylesheets/voucherModal.css
@@ -96,6 +96,10 @@
     align-content: center;
     
 }
+.modal-Content-Before-Upload{
+    padding: 10px;
+    text-align: center;
+}
 table{
     margin-left: auto;
     margin-right: auto;
