i added my portion of the project in which was the phone number entry, the automatic 000-000-0000 and connecting my code with garretts code

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -36,6 +36,26 @@ body {
   align-items: left;
   justify-content: center;
 }
+#AdminBtn {
+  float: right;
+}
+#PhantomDiv {
+  justify-content: center;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+}
+
+#PhantomDiv button:hover {
+
+  border: 2px solid #8E35F8;
+  color: purple;
+
+}
+#PhCon {
+  justify-content: center;
+  text-align: center;
+}
+
 .submitBtn {
   margin: 20px;
   padding: 10px;
@@ -57,9 +77,17 @@ body {
 .emailListed{
   float:right;
   margin-right: 2rem;
+  padding: 0px 30px 0px 20px;
+}
+.phoneListed {
+  float: right;
+  padding: 0px 48px 0px 20px;
 }
 .editControls{
   display: none;
+}
+.unit {
+  padding-top: 20px;
 }
 .editGui {
   margin-bottom: 20px;
@@ -80,4 +108,21 @@ body {
 }
 #submitEmailsButton{
   display: none;
+}
+#TwoStep button {
+  padding: 50px 0px 50px 0px ;
+}
+#LoginDiv {
+  padding: 50px 0px 50px 0px;
+
+}
+#EntryNstuff {
+
+  padding: 50px 10px 50px 10px;
+}
+#TwoFAoptions {
+  padding: 50px 10px 50px 10px;
+}
+.addEntry {
+  padding: 30px 10px 30px 10px;
 }
